2007-10-09  John W. Eaton  <jwe@octave.org>

	* dSparse.cc (SparseMatrix::all_elements_are_zero): New function.
	* dNDArray.cc (NDArray::all_elements_are_zero): New function.

2007-10-09  David Bateman  <dbateman@free.fr>

	* Array2.h (Array2<T>::Array2(const dim_vector&),
	Array2<T>::Array(const dim_vector&, const T&)): Check that
	dim_vector is 2 dimensional.

	* Sparse.cc (Sparse<T> Sparse<T>::index (idx_vector&, idx_vector&,
	int)): Remove a for loop in the random indexing case at the
	expense of maintaining a set of linked lists of indices that point 
	to the same column in the original matrix.
	(int assign (Sparse<LT>&, Sparse<RT>)): Take a const copy of lhs
	and use it on the RHS of expressions to avoid unnecessary calls to
	make_unique.

2007-10-08  David Bateman  <dbateman@free.fr>

	* oct-rl-edit. (typedef rl_quoting_fcn_ptr, rl_dequoting_fcn_ptr,
	rl_char_is_quoted_fcn_ptr, rl_command_fcn_ptr): New  typedefs
	for readline compatible functions.
	(octave_rl_redisplay): Redisplay the current line of text.
	(octave_rl_newline):  Change interface to the same
	as used by the equivalent readline function itself.
	(octave_rl_filename_quoting_desired,
	octave_rl_set_filename_quote_characters,
	octave_rl_set_completer_quote_characters,
	octave_rl_qet_quoting_function, octave_rl_qet_dequoting_function,
	octave_rl_set_char_is_quoted_function): New functions to control
	readline filename quoting and line acceptace.
	* oct-rl-edit.c (octave_rl_newline): Change interface to the same
	as used by the equivalent readline function itself.
	(octave_rl_redisplay): Redisplay the current line of text.
	(octave_rl_filename_quoting_desired,
	octave_rl_set_filename_quote_characters,
	octave_rl_set_completer_quote_characters,
	octave_rl_qet_quoting_function, octave_rl_qet_dequoting_function,
	octave_rl_set_char_is_quoted_function): New functions to control
	readline filename quoting and line acceptace.
	* cmd-edit.h (typedef quoting_fcn, typedef dequoting_fcn,